--- a/app/views/produtos/lista.ejs
+++ b/app/views/produtos/lista.ejs
@@ -1,22 +1,20 @@
 <html>
 <body>
-  <table border="1px">
+  <table>
     <tr>
-      <td>
-        id
-      </td>
-      <td>
-        nome
-      </td>
+      <td>id</td>
+      <td>titulo</td>
+      <td>descricao</td>
+      <td>preco</td>
     </tr>
-    <tr>
-      <td>
-        1
-      </td>
-      <td>
-        livro de node js
-      </td>
-    </tr>
+    <% for(var i=0; i<lista.length; i++){ %>
+      <tr>
+          <td><%= lista[i].id %></td>
+          <td><%= lista[i].titulo %></td>
+          <td><%= lista[i].descricao %></td>
+          <td><%= lista[i].preco %></td>
+      </tr>
+    <% } %>
   </table>
 </body>
 </html>
