Método salva() e rota para action do botao

--- a/app/views/produtos/form.ejs
+++ b/app/views/produtos/form.ejs
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-      <form action="produtos/salva" method="post" id="cadastro">
+      <form action="/produtos/salva" method="post" id="cadastro">
         <div>
           <label for="titulo">Titulo</label>
           <input type="text" name="titulo" id="titulo" placeholder="Coloque o nome do livro aqui">
@@ -16,7 +16,7 @@
           <label for="descricao">Descrição</label>
           <textarea name="descricao" id="descricao" rows="8" cols="80" form="cadastro" placeholder="Insira a descrição do livro aqui"></textarea>
         </div>
-        <input type="submit" name="gravar" id="gravar" value="Gravar">
+        <input type="submit" value="Gravar">
       </form>
   </body>
 </html>
