--- a/app/views/produtos/form.ejs
+++ b/app/views/produtos/form.ejs
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-      <form action="/produtos/salva" method="post" id="cadastro">
+      <form action="/produtos" method="post" id="cadastro">
         <div>
           <label for="titulo">Titulo</label>
           <input type="text" name="titulo" id="titulo" placeholder="Coloque o nome do livro aqui">
