Validação respeitando o Accept e alterando o status code do HTTP

--- a/app/views/produtos/form.ejs
+++ b/app/views/produtos/form.ejs
@@ -15,15 +15,15 @@
       <form action="/produtos" method="post" id="cadastro">
         <div>
           <label for="titulo">Titulo</label>
-          <input type="text" name="titulo" id="titulo" placeholder="Coloque o nome do livro aqui">
+          <input type="text" name="titulo" id="titulo" value="<%=produto.titulo%>" placeholder="Coloque o nome do livro aqui">
         </div>
         <div>
           <label for="preco">Preço</label>
-          <input type="text" name="preco" id="preco" placeholder="99.99">
+          <input type="text" name="preco" id="preco" value="<%=produto.preco%>" placeholder="99.99">
         </div>
         <div>
           <label for="descricao">Descrição</label>
-          <textarea name="descricao" id="descricao" rows="8" cols="80" form="cadastro" placeholder="Insira a descrição do livro aqui"></textarea>
+          <textarea name="descricao" id="descricao" rows="8" cols="80" form="cadastro" placeholder="Insira a descrição do livro aqui"><%=produto.descricao%></textarea>
         </div>
         <input type="submit" value="Gravar">
       </form>
